--- a/SimpleProject/Podfile
+++ b/SimpleProject/Podfile
@@ -19,6 +19,8 @@ target 'SimpleProject' do
     inherit! :search_paths
     # Pods for testing
     pod 'RxSwift'
+    pod 'Quick'
+    pod 'Nimble'
   end
 
 end
